2008-10-13  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu-private.h
	* src/hildon-app-menu.[ch]
	* src/hildon-button.[ch]
	* src/hildon-check-button.[ch]
	* src/hildon-entry.[ch]
	* src/hildon-pannable-area.[ch]
	* src/hildon-text-view.[ch]:
	Added private field to the object's structure.

2008-10-13  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post-release version bump

2008-10-10  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.14]

	* configure.ac: pre-release version bump
	* NEWS: updates.
	* debian/changelog: updates.

2008-10-10  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-button.c: (hildon_picker_button_finalize):
	Disconnect the handler for HildonTouchSelector::changed.

	(hildon_picker_button_selector_selection_changed): Update the button
	value if the selection change was not triggered by the
	HildonPickerDialog.

	(hildon_picker_button_set_selector): connect to
	HildonTouchSelector::changed.

	Fixes: NB#89650 (Picker button is not updated, when selection in
	selector has changed)

2008-10-09  Alejandro Pinheiro	 <apinheiro@igalia.com>

	* src/hildon-picker-dialog.c
	(hildon_picker_dialog_realize): Removed as not required
	(hildon_picker_dialog_class_init): Avoid to redefine widget->realize
	* src/hildon-picker-button.c
	(_current_selector_empty): New function, checks if the selector is empty
	(hildon_picker_button_clicked): Now it checks (using _current_selector_empty)
	if the current selector is empty, in order to avoid to show the dialog
	close the dialog in this case (and shows a g_warning).

	Fixes: NB#88946 (Hildon Picker button should disable itself if there are no values)

2008-10-09  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_scroll): Added clause to stop movement when
	the child of pannable is smaller than one page.
	(hildon_pannable_area_scroll_to): Added conditions to avoid