@@ -140,7 +140,7 @@ hildon_touch_selector_entry_print_func (HildonTouchSelector * selector)
   GtkTreeModel *model;
   GtkTreeIter iter;
   gint column;
-  gchar *text;
+  gchar *text = NULL;
 
   priv = HILDON_TOUCH_SELECTOR_ENTRY_GET_PRIVATE (selector);
 
@@ -148,9 +148,10 @@ hildon_touch_selector_entry_print_func (HildonTouchSelector * selector)
     text = g_strdup (gtk_entry_get_text (GTK_ENTRY (priv->entry)));
   } else {
     model = hildon_touch_selector_get_model (selector, 0);
-    hildon_touch_selector_get_selected (selector, 0, &iter);
-    column = hildon_touch_selector_entry_get_text_column (HILDON_TOUCH_SELECTOR_ENTRY (selector));
-    gtk_tree_model_get (model, &iter, column, &text, -1);
+    if (hildon_touch_selector_get_selected (selector, 0, &iter)) {
+      column = hildon_touch_selector_entry_get_text_column (HILDON_TOUCH_SELECTOR_ENTRY (selector));
+      gtk_tree_model_get (model, &iter, column, &text, -1);
+    }
   }
 
   return text;
